[gd_scene load_steps=5 format=3 uid="uid://cld1plrm3lu34"]

[ext_resource type="Script" uid="uid://bvd6agififte0" path="res://ui/splash.gd" id="1_dxldi"]
[ext_resource type="Theme" uid="uid://cpx2c60ubwk1w" path="res://ui/themes/MainTheme.tres" id="1_fp2y4"]
[ext_resource type="Texture2D" uid="uid://du3en20j3o056" path="res://assets/backgrounds/splash_01.png" id="1_rween"]
[ext_resource type="PackedScene" uid="uid://qw4o6e4fa00d" path="res://ui/MenuPrincipal.tscn" id="2_2ksfj"]

[node name="Splash" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_fp2y4")
script = ExtResource("1_dxldi")
load_scene = ExtResource("2_2ksfj")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 4.23523
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_rween")
expand_mode = 3
stretch_mode = 5

[node name="MainContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.3
anchor_top = 0.05
anchor_right = 0.9
anchor_bottom = 0.7
grow_horizontal = 0
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 50

[node name="TextContents" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="Versos" type="Label" parent="MainContainer/TextContents"]
layout_mode = 2
theme_override_font_sizes/font_size = 38
text = "Todo parece perfecto
cuando el fin grita su voz,
pero algo dentroâ€¦ feroz
me recuerda que estoy muerto."
horizontal_alignment = 2

[node name="Signature" type="Label" parent="MainContainer/TextContents"]
layout_mode = 2
text = "extracto de \"Polvo y Paso\", poema popular de Kirnath"
horizontal_alignment = 2

[node name="FooterContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -19.0
grow_horizontal = 2
grow_vertical = 0

[node name="FooterMargins" type="MarginContainer" parent="FooterContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="SmallInfo" type="Label" parent="FooterContainer/FooterMargins"]
layout_mode = 2
text = "Consecuencias"
horizontal_alignment = 2
